# schonhage-strassen

./: CMakeLists.txt  large_numbers.txt  main.cpp  main.out
src/: convolution.cpp  convolution.hpp  fft.cpp  fft.hpp  main.cpp  mult.cpp  mult.hpp  ntt.cpp  ntt.hpp  product.cpp  product.hpp  tests.cpp  tests.hpp  utils.cpp  utils.hpp
